2020-09-24 Wiley E. Hill <wileyhill@gmail.com>

    * src/x/x_confirm_close.c: Revise confirm_close_dialog_constructor; wait
      until widgets are assembled before showing. Revise close confirmation
      message.

    * src/x/x_settings_dialog.c: Add missing mnemonic to the save button.

2020-09-22 Wiley E. Hill <wileyhill@gmail.com>

    * include/x_settings.h: Enumerate AutoPan.

    * include/x_settings_dialog.h: Add AutoPanSwitch to DialogStrings.

    * src/iface/i_window.c: Add function documentation:

        * i_window_set_grid_type

    * src/x/x_settings.c: Revise configure_dialog_response to update the
      AUTO_PAN_TOGGLE menu item.

    * src/x/x_settings_dialog.c: Add switch for auto_pan option on the Windows
      tab.

    * templates/schematic.sch.in: Add a titleblock to the template schematic.

2020-09-21 Wiley E. Hill <wileyhill@gmail.com>

    * src/x/x_window.c: Add function documentation:

        * x_window_reset_page_geometry

2020-09-19 Wiley E. Hill <wileyhill@gmail.com>

    * po/he.po: Update Hebrew translations.
    * po/ja.po: Update Japanese translations.
    * po/kh.po: Update Khmer translations.
    * po/nl.po: Update Dutch translations.
    * po/pl.po: Update Polish translations.
    * po/pt.po: Update Portuguese translations.
    * po/pt_BR.po: Update Brazilian Portuguese translations.
    * po/ru.po: Update Russian translations.
    * po/sl.po: Update Slovenian translations.

2020-09-18 Wiley E. Hill <wileyhill@gmail.com>

    * src/x/x_toolbars.c: Add function documentation:

        * x_toolbars_activate_select
        * x_toolbars_set_show_tooltips

    * src/x/x_window.c

        * x_window_toolbar_tips_toggle

2020-09-17 Wiley E. Hill <wileyhill@gmail.com>

    * etc/system-gschemrc.scm: Revise attributes-detach menu item tooltip.

    * include/gschem.h: Include gschem_macros.h.

    * include/gschem_globals.h: Remove message dialog macros.

    * include/gschem_macros.h: Relocate message dialog macros removed from